# titan

./: Cargo.toml  LICENSE  README.md  TODO.md  completions.fish  titan.schema.json  titan.toml
.github/workflows/: rust.yml
src/: command_line.rs  config.rs  errors.rs  fish_completions.rs  main.rs  print_config.rs  run_commands.rs  tests.rs
tests/: example.yaml
